--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -40,3 +40,21 @@
 .read-the-docs {
   color: #888;
 } */
+
+#preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+  background-color: #fff;
+  opacity: 0.8;
+}
+
+#preloader .loading {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
